added another error example, added recursion

--- a/awakening_python.ipynb
+++ b/awakening_python.ipynb
@@ -739,6 +739,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### very advanced function: recursion\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -930,6 +939,18 @@
     "For each: \n",
     "1. Run the cell to observe the error\n",
     "2. Copy the cell and fix the bug\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# infinite loop error\n",
+    "i = 0\n",
+    "while (i < 10):\n",
+    "    continue"
    ]
   },
   {
